fix: 2차 리뷰 P2·P3 반영 — MANUAL 존 수렴 제외·OFF 되살리기 차단·정지 감사 최소 1행 (#100)
P2-① 시뮬레이터 해제 판정에 mode=MANUAL 추가(계약 0fe07ae) — '꺼진 제어기의 존재'에만 의존하면
      제어기가 없는 존과 제어기가 OFFLINE인 존은 비상 정지 후에도 계속 목표로 끌려간다(UI는 정지
      완료, 그래프만 끌려감). dead code였던 ControlModeRepository#findByFarmId를 이 용도로 사용하고
      javadoc을 실제 용도로 정정
P2-② rejectControlOnlyStatusChange 신설 — 끄기(→OFF)만 막고 되살리기(OFF→NORMAL)는 통과해
      비상 정지가 PATCH 1건으로 무력화됐다. 근거(감사 없는 되살리기 차단)와 효과를 일치시킨다.
      OFF가 아닌 장비의 관측 상태 갱신은 그대로 허용
P2-③ 비상 정지는 영향 0이어도 감사 1행(zoneId 최솟값에 기록) — 정지 대상이 제어기로 좁혀져
      '영향 0'이 흔해졌고, 기록이 없으면 안전 조작 호출 사실 자체가 사라진다
P3   TOGGLEABLE_STATUSES·TARGET_RANGES 불변화(EnumSet/EnumMap은 가변) ·
      lockExistingZone javadoc에 '호출 전 존 검증 완료' 전제 명시(가드 없는 락 관용구 재발 차단)